--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -177,6 +177,20 @@
     "    #!gdown https://acortar.link/IjtgWB -O animatediff.zip && unzip -n animatediff.zip && rm animatediff.zip\n",
     "    #!gdown https://acortar.link/11b1Vu -O refiner.zip && unzip -n refiner.zip && rm refiner.zip\n",
     "\n",
+    "    #!git clone https://github.com/GeorgLegato/sd-webui-panorama-viewer\n",
+    "    #!git clone https://github.com/ljleb/sd-webui-neutral-prompt\n",
+    "    #!git clone https://github.com/ashen-sensored/sd_webui_masactrl\n",
+    "    #!git clone https://github.com/SpenserCai/sd-webui-deoldify\n",
+    "    #!git clone https://github.com/Artiprocher/sd-webui-fastblend\n",
+    "    #!git clone https://github.com/ashen-sensored/sd_webui_SAG\n",
+    "    #!git clone https://github.com/ModelSurge/sd-webui-comfyui\n",
+    "    #!git clone https://github.com/antfu/sd-webui-qrcode-toolkit\n",
+    "    #!git clone https://github.com/NeoGraph-K/sd-webui-ddsd\n",
+    "    #!git clone https://github.com/Em1tSan/sd-webui-roop-unlock\n",
+    "\n",
+    "    #https://github.com/victorchall/EveryDream2trainer\n",
+    "\n",
+    "\n",
     "    #Upscaler\n",
     "    !mkdir /home/studio-lab-user/content/SDZ/models/ESRGAN\n",
     "    %cd /home/studio-lab-user/content/SDZ/models/ESRGAN\n",
@@ -351,6 +365,27 @@
     "    print(COLOR_CYAN + \"RUN THIS CELL, IT WILL DELETE ENTIRE NOTEBOOK, OR IF YOU WANT A FRESH-INSTALL NOTEBOOK, then DO : RUN THIS CELL > STOP RUNTIME - STAR AGAIN\" + COLOR_RESET)\n",
     "\n",
     "def opcion9():\n",
+    "    print(COLOR_CYAN + \"ENTER THE FOLDER PATH TO COMPRESS!\" + COLOR_RESET)\n",
+    "    \n",
+    "    carpeta_a_comprimir = input(\"Folder Path: \")\n",
+    "    if not os.path.exists(carpeta_a_comprimir):\n",
+    "        print(\"The folder does not exist. Please enter a valid folder path.\")\n",
+    "        return\n",
+    "    \n",
+    "    nombre_carpeta = os.path.basename(carpeta_a_comprimir)\n",
+    "    ruta_completa_archivo_zip = os.path.join(os.path.dirname(carpeta_a_comprimir), nombre_carpeta)\n",
+    "    \n",
+    "    try:\n",
+    "        shutil.make_archive(ruta_completa_archivo_zip, 'zip', os.path.dirname(carpeta_a_comprimir), nombre_carpeta)\n",
+    "        print(COLOR_CYAN + \"FOLDER COMPRESSED SUCCESSFULLY!\" + COLOR_RESET)\n",
+    "    except Exception as e:\n",
+    "        print(f\"AN ERROR OCURRED: {str(e)}\")\n",
+    "\n",
+    "    print(\"--PRESS ENTER TO CONTINUE--\")\n",
+    "    input()\n",
+    "    clear_output()\n",
+    "    \n",
+    "def opcion0():\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"GOODBYE!\" + COLOR_RESET)\n",
     "\n",
@@ -366,7 +401,8 @@
     "    print(\"6. Check Space Disk\")\n",
     "    print(\"7. Clean Cache\")\n",
     "    print(\"8. Delete All\")\n",
-    "    print(\"9. Exit\")\n",
+    "    print(\"9. Compress Folder\")\n",
+    "    print(\"0. Exit\")\n",
     "    print(\" \")\n",
     "    opcion = input(\" Select an option:\")\n",
     "    \n",
@@ -393,13 +429,17 @@
     "        \n",
     "    elif opcion == \"8\":\n",
     "        opcion8() \n",
-    "    \n",
+    "        \n",
     "    elif opcion == \"9\":\n",
-    "        opcion9()\n",
+    "        opcion9() \n",
+    "    \n",
+    "    elif opcion == \"0\":\n",
+    "        opcion0()\n",
     "        break\n",
     "    \n",
     "    else:\n",
-    "        print(COLOR_CYAN + \"INVALID OPTION. PLEASE SELECT A VALID OPTION\" + COLOR_RESET)\n"
+    "        print(COLOR_CYAN + \"INVALID OPTION. PLEASE SELECT A VALID OPTION\" + COLOR_RESET)\n",
+    "\n"
    ]
   }
  ],
