--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -20,7 +20,6 @@
     "def opcion1():\n",
     "    print(COLOR_CYAN + \"WAIT A MOMENT WHILE THE INSTALLATION FINISH\" + COLOR_RESET)\n",
     "    \n",
-    "    !mkdir /home/studio-lab-user\n",
     "    %cd /home/studio-lab-user\n",
     "\n",
     "    !pip install -q --upgrade pip\n",
@@ -61,6 +60,7 @@
     "    \n",
     "def opcion2():\n",
     "    print(COLOR_CYAN + \"WAIT A MOMENT WHILE THE TEMPORAL INSTALLATION OF THE MODELS FINISH\" + COLOR_RESET)\n",
+    "    %conda install -q -y aria2\n",
     "\n",
     "    !ln -vs /tmp ~/tmp\n",
     "    #\n",
@@ -406,6 +406,7 @@
     "                print(COLOR_CYAN + \"LIST ALL\" + COLOR_RESET)\n",
     "                \n",
     "            elif sub_opcion == \"4\":\n",
+    "                !pip install -q --upgrade psutil\n",
     "                clear_output()\n",
     "                import os\n",
     "                import psutil\n",
