--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -28,6 +28,8 @@
     "    #!pip install -q pytz\n",
     "    #!pip install -q tensorflow\n",
     "    \n",
+    "    #!conda install -c conda-forge libglib -y & conda update -n base conda -y\n",
+    "\n",
     "    %conda install -q -y aria2\n",
     "    %conda install -q -y libglib2.0-0\n",
     "    %conda install -q -y glib\n",
