--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -19,6 +19,7 @@
     "\n",
     "def opcion1():\n",
     "    print(COLOR_CYAN + \"WAIT A MOMENT WHILE THE INSTALLATION FINISH\" + COLOR_RESET)\n",
+    "    !ln -vs /tmp ~/tmp\n",
     "    \n",
     "    %cd /home/studio-lab-user\n",
     "\n",
@@ -70,14 +71,14 @@
     "    !rm -rd ~/SDZ/outputs\n",
     "    !ln -vs /tmp/outputs /home/studio-lab-user/SDZ/outputs\n",
     "\n",
-    "\n",
     "    #Checkpoint\n",
     "    !mkdir -p /tmp/models\n",
-    "    !rm -rd ~/SDZ/models/Stable-diffusion/tmp_models\n",
-    "    !ln -vs /tmp/models /home/studio-lab-user/SDZ/models/Stable-diffusion/tmp_models\n",
-    "    %cd ~/SDZ/models/Stable-diffusion/tmp_models\n",
+    "    !rm -rd ~/SDZ/models/Stable-diffusion\n",
+    "    !ln -vs /tmp/models /home/studio-lab-user/SDZ/models/Stable-diffusion\n",
+    "    %cd ~/SDZ/models/Stable-diffusion\n",
     "\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/15236\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/130072\n",
     "    #!wget --no-check-certificate --content-disposition https://civitai.com/api/download/models/15236\n",
     "\n",
     "    #extensions\n",
