--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -23,14 +23,14 @@
     "    \n",
     "    %cd /home/studio-lab-user\n",
     "\n",
-    "    !pip install -q --upgrade pip\n",
+    "    #!conda install -c conda-forge libglib -y & conda update -n base conda -y\n",
+    "\n",
+    "    #!pip install -q --upgrade pip\n",
     "    !pip install -q --upgrade psutil\n",
-    "    !pip install -q --upgrade torchsde\n",
+    "    #!pip install -q --upgrade torchsde\n",
     "    #!pip install -q pytz\n",
     "    #!pip install -q tensorflow\n",
     "    \n",
-    "    #!conda install -c conda-forge libglib -y & conda update -n base conda -y\n",
-    "\n",
     "    %conda install -q -y aria2\n",
     "    %conda install -q -y libglib2.0-0\n",
     "    %conda install -q -y glib\n",
@@ -79,6 +79,7 @@
     "\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/15236\n",
     "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/130072\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/135166\n",
     "    #!wget --no-check-certificate --content-disposition https://civitai.com/api/download/models/15236\n",
     "\n",
     "    #extensions\n",
@@ -430,10 +431,11 @@
     "                \n",
     "            elif sub_opcion == \"6\":\n",
     "                clear_output()\n",
-    "                !rm -r /home/studio-lab-user/.cache\n",
-    "                !rm -r /home/studio-lab-user/.conda\n",
-    "                !conda remove -n \"env_name\" --all\n",
-    "                !rm -rf /home/studio-lab-user/*\n",
+    "                #!rm -r /home/studio-lab-user/.cache\n",
+    "                #!rm -r /home/studio-lab-user/.conda\n",
+    "                #!conda remove -n \"env_name\" --all\n",
+    "                #!rm -rf /home/studio-lab-user/*\n",
+    "                !rm -rf /home/studio-lab-user/\n",
     "                clear_output()\n",
     "                print(COLOR_CYAN + \"RUN THIS CELL, IT WILL DELETE ENTIRE NOTEBOOK, OR IF YOU WANT A FRESH-INSTALL NOTEBOOK, then DO : RUN THIS CELL > STOP RUNTIME - STAR AGAIN\" + COLOR_RESET)\n",
     "                \n",
