--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -67,9 +67,9 @@
     "\n",
     "    !ln -vs /tmp ~/tmp\n",
     "    #\n",
-    "    !mkdir -p /tmp/outputs\n",
-    "    !rm -rd ~/SDZ/outputs\n",
-    "    !ln -vs /tmp/outputs /home/studio-lab-user/SDZ/outputs\n",
+    "    #!mkdir -p /tmp/outputs\n",
+    "    #!rm -rd ~/SDZ/outputs\n",
+    "    #!ln -vs /tmp/outputs /home/studio-lab-user/SDZ/outputs\n",
     "\n",
     "    #Checkpoint\n",
     "    !mkdir -p /tmp/models\n",
@@ -230,18 +230,17 @@
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11e_sd15_ip2p_fp16.safetensors -o control_v11e_sd15_ip2p_fp16.safetensors\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11e_sd15_ip2p_fp16.yaml -o control_v11e_sd15_ip2p_fp16.yaml\n",
     "\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_style_sd14v1.pth -o t2iadapter_style_sd14v1.pth\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_sketch_sd14v1.pth -o t2iadapter_sketch_sd14v1.pth\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_seg_sd14v1.pth -o t2iadapter_seg_sd14v1.pth\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_openpose_sd14v1.pth -o t2iadapter_openpose_sd14v1.pth\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_keypose_sd14v1.pth -o t2iadapter_keypose_sd14v1.pth\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_depth_sd14v1.pth -o t2iadapter_depth_sd14v1.pth\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_color_sd14v1.pth -o t2iadapter_color_sd14v1.pth\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_canny_sd14v1.pth -o t2iadapter_canny_sd14v1.pth\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_canny_sd15v2.pth -o t2iadapter_canny_sd15v2.pth\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_depth_sd15v2.pth -o t2iadapter_depth_sd15v2.pth\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_sketch_sd15v2.pth -o t2iadapter_sketch_sd15v2.pth\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_zoedepth_sd15v1.pth -o t2iadapter_zoedepth_sd15v1.pth     \n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/85428 -O lightingBasedPicture_v10.safetensors\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/111973 -O controlnetQRPatternQR_v20.safetensors\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_canny-fp16.safetensors\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_color-fp16.safetensors\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_depth-fp16.safetensors\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_keypose-fp16.safetensors\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_openpose-fp16.safetensors\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_seg-fp16.safetensors\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_sketch-fp16.safetensors\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_style-fp16.safetensors\n",
+    " \n",
     "\n",
     "    !mkdir -p /tmp/ESRGAN\n",
     "    !rm -rd ~/SDZ/models/ESRGAN\n",
