--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -71,6 +71,18 @@
     "    #!rm -rd ~/SDZ/outputs\n",
     "    #!ln -vs /tmp/outputs /home/studio-lab-user/SDZ/outputs\n",
     "\n",
+    "    !mkdir -p /tmp/Codeformer\n",
+    "    !rm -rd ~/SDZ/models/Codeformer\n",
+    "    !ln -vs /tmp/Codeformer /home/studio-lab-user/SDZ/models/Codeformer\n",
+    "\n",
+    "    !mkdir -p /tmp/GFPGAN\n",
+    "    !rm -rd ~/SDZ/models/GFPGAN\n",
+    "    !ln -vs /tmp/GFPGAN /home/studio-lab-user/SDZ/models/GFPGAN\n",
+    "\n",
+    "    !mkdir -p /tmp/deepbooru\n",
+    "    !rm -rd ~/SDZ/models/deepbooru\n",
+    "    !ln -vs /tmp/deepbooru /home/studio-lab-user/SDZ/models/deepbooru\n",
+    "\n",
     "    #Checkpoint\n",
     "    !mkdir -p /tmp/models\n",
     "    !rm -rd ~/SDZ/models/Stable-diffusion\n",
@@ -381,7 +393,7 @@
     "            print(\"4. Check Space Disk\")\n",
     "            print(\"5. Clean Cache\")\n",
     "            print(\"6. Delete All\")\n",
-    "            print(\"7. Compress Folder\")\n",
+    "            print(\"7. Compress Output Folder\")\n",
     "            print(\"0. Back to Main Menu\")\n",
     "            print(\" \")\n",
     "\n",
@@ -474,6 +486,7 @@
     "                max_size_mb = 200\n",
     "                # Create zip files with a maximum size of 20MB\n",
     "                zip_folder(input_folder, output_folder, max_size_mb)\n",
+    "                print(COLOR_CYAN + \"COMPRESS OUTPUT FOLDER IN /home/studio-lab-user\" + COLOR_RESET)\n",
     "            \n",
     "            elif sub_opcion == \"0\":\n",
     "                break  # Sal del menú de actualización y regresa al menú principal\n",
