--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -397,7 +397,7 @@
     "            print(\"0. Back to Main Menu\")\n",
     "            print(\" \")\n",
     "\n",
-    "            sub_opcion = input(\"Select an option (Update SDZ): \")\n",
+    "            sub_opcion = input(\"Select an option: \")\n",
     "\n",
     "            if sub_opcion == \"1\":\n",
     "                clear_output()\n",
