--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -479,7 +479,7 @@
     "                                current_zip.write(file_path, os.path.relpath(file_path, input_folder))\n",
     "                                current_zip_size += file_size\n",
     "                # Specify the input folder to be zipped\n",
-    "                input_folder = '/tmp/outputs'  # Replace with the path to your input folder\n",
+    "                input_folder = '/home/studio-lab-user/SDZ/outputs'  # Replace with the path to your input folder\n",
     "                # Specify the output folder where zip files will be saved\n",
     "                output_folder = '/home/studio-lab-user'  # Replace with the path to your output folder\n",
     "                # Specify the maximum size for each zip file in MB\n",
