--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -141,6 +141,7 @@
     "\n",
     "    #!git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git\n",
     "    #!git clone https://github.com/opparco/stable-diffusion-webui-composable-lora.git\n",
+    "    #!git clone https://github.com/thygate/stable-diffusion-webui-depthmap-script\n",
     "    #!git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
     "    #!git clone https://github.com/alemelis/sd-webui-ar.git\n",
     "    #!git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
