--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -145,6 +145,7 @@
     "    #!git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
     "    #!git clone https://github.com/alemelis/sd-webui-ar.git\n",
     "    #!git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
+    "    #!git clone https://github.com/NextDiffusion/next-view\n",
     "    #!git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
     "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-pixelization.git\n",
     "    #!git clone https://github.com/s9roll7/ebsynth_utility.git\n",
