--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -122,6 +122,7 @@
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/guoyww/animatediff/resolve/main/mm_sd_v15_v2.ckpt -d /home/studio-lab-user/SDZ/models/Stable-diffusion -o mm_sd_v15_v2.ckpt\n",
     "    #!git clone https://github.com/DavideAlidosi/sd-webui-controlnet-animatediff\n",
     "    #!git clone https://github.com/DavideAlidosi/sd-webui-animatediff-for-ControlNet\n",
+    "    #!git clone https://github.com/NextDiffusion/next-view\n",
     "\n",
     "\n",
     "    #!git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
