--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -98,7 +98,7 @@
     "    %cd ~/SDZ/extensions\n",
     "\n",
     "    !git clone https://github.com/etherealxx/batchlinks-webui\n",
-    "    #!git clone https://github.com/Gourieff/sd-webui-reactor\n",
+    "\n",
     "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111\n",
     "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete\n",
     "    !git clone https://github.com/zanllp/sd-webui-infinite-image-browsing\n",
@@ -110,6 +110,7 @@
     "    !git clone https://github.com/Mikubill/sd-webui-controlnet\n",
     "    #!git clone https://github.com/A-I-Channel/explorer-image\n",
     "    #!git clone https://github.com/A-I-Channel/public-link\n",
+    "    #!git clone https://github.com/Gourieff/sd-webui-reactor\n",
     "\n",
     "    #!git clone https://github.com/glucauze/sd-webui-faceswaplab\n",
     "    #!sed -i '17,44d' /home/studio-lab-user/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
@@ -118,12 +119,12 @@
     "    #!git clone https://github.com/s0md3v/sd-webui-roop\n",
     "    #!sed -i 's|shapes.append(chunk\\[\"score\"\\] > 0.7)|shapes.append(chunk[\"score\"] > 99999)|' /home/studio-lab-user/SDZ/extensions/sd-webui-roop/scripts/cimage.py\n",
     "\n",
-    "    !git clone https://github.com/continue-revolution/sd-webui-animatediff\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/guoyww/animatediff/resolve/main/mm_sd_v15_v2.ckpt -d /home/studio-lab-user/SDZ/models/Stable-diffusion -o mm_sd_v15_v2.ckpt\n",
+    "    #!git clone https://github.com/wilzamguerrero/rp\n",
+    "    #!git clone https://github.com/continue-revolution/sd-webui-animatediff\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/guoyww/animatediff/resolve/main/mm_sd_v15_v2.ckpt -d /home/studio-lab-user/SDZ/models/Stable-diffusion -o mm_sd_v15_v2.ckpt\n",
     "    #!git clone https://github.com/DavideAlidosi/sd-webui-controlnet-animatediff\n",
     "    #!git clone https://github.com/DavideAlidosi/sd-webui-animatediff-for-ControlNet\n",
     "    #!git clone https://github.com/NextDiffusion/next-view\n",
-    "\n",
     "\n",
     "    #!git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
     "    #!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
