--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -253,8 +253,6 @@
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11e_sd15_ip2p_fp16.safetensors -o control_v11e_sd15_ip2p_fp16.safetensors\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11e_sd15_ip2p_fp16.yaml -o control_v11e_sd15_ip2p_fp16.yaml\n",
     "\n",
-    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/85428 -o lightingBasedPicture_v10.safetensors\n",
-    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/111973 -o controlnetQRPatternQR_v20.safetensors\n",
     "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_canny-fp16.safetensors -o t2iadapter_canny-fp16.safetensors\n",
     "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_color-fp16.safetensors -o t2iadapter_color-fp16.safetensors\n",
     "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_depth-fp16.safetensors -o t2iadapter_depth-fp16.safetensors\n",
@@ -263,6 +261,13 @@
     "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_seg-fp16.safetensors -o t2iadapter_seg-fp16.safetensors\n",
     "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_sketch-fp16.safetensors -o t2iadapter_sketch-fp16.safetensors\n",
     "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_style-fp16.safetensors -o t2iadapter_style-fp16.safetensors\n",
+    "\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/85428 -o lightingBasedPicture_v10.safetensors\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/111973 -o controlnetQRPatternQR_v20.safetensors\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter-plus-face_sd15.bin -o ip-adapter-plus-face_sd15.pth\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter-plus_sd15.bin -o ip-adapter-plus_sd15.pth\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter_sd15.bin -o ip-adapter_sd15.pth\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter_sd15_light.bin -o ip-adapter_sd15_light.pth\n",
     " \n",
     "    !mkdir -p /tmp/clip_vision\n",
     "    !rm -rd ~/SDZ/extensions/sd-webui-controlnet/annotator/downloads/clip_vision\n",
