--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -366,10 +366,14 @@
     "    print(COLOR_CYAN + \"MODELS UPDATED\" + COLOR_RESET)\n",
     "    \n",
     "def opcion3():\n",
+    "    clear_output()\n",
     "    %cd /home/studio-lab-user/SDZ\n",
     "    clear_output()\n",
+    "    print(COLOR_CYAN + \"SDZ CANT RUN IF YOU ENTER A INVALID NGROK TOKEN\" + COLOR_RESET)\n",
+    "    ngrok_token = input(\" Insert ngrok token: \")\n",
+    "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ RUNNING\" + COLOR_RESET)\n",
-    "    SDZ_Args = \"--ngrok 27CtKvowx7GncNntBFdaHEIjnoe_4Z2bzEfzhAVea2zwTaJTp --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle --disable-console-progressbars\"\n",
+    "    SDZ_Args = f\"--ngrok {ngrok_token} --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle --disable-console-progressbars\"\n",
     "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ FINISH\" + COLOR_RESET)\n",
