--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -15,6 +15,7 @@
     "import requests\n",
     "import importlib.util\n",
     "COLOR_CYAN = '\\033[96;1;38;5;51m'\n",
+    "COLOR_WHITE = '\\033[97m'\n",
     "COLOR_RESET = '\\033[0m'\n",
     "\n",
     "def opcion1():\n",
@@ -369,6 +370,7 @@
     "    clear_output()\n",
     "    %cd /home/studio-lab-user/SDZ\n",
     "    clear_output()\n",
+    "    print(COLOR_WHITE + \"CREATE NGROK TOKEN >>> https://dashboard.ngrok.com/get-started/your-authtoken\" + COLOR_RESET)\n",
     "    print(COLOR_CYAN + \"SDZ CANT RUN IF YOU ENTER A INVALID NGROK TOKEN\" + COLOR_RESET)\n",
     "    ngrok_token = input(\" Insert ngrok token: \")\n",
     "    clear_output()\n",
