--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -72,6 +72,17 @@
     "    #!rm -rd ~/SDZ/outputs\n",
     "    #!ln -vs /tmp/outputs /home/studio-lab-user/SDZ/outputs\n",
     "\n",
+    "    !mkdir -p /tmp/roop\n",
+    "    !rm -rd ~/SDZ/models/roop\n",
+    "    !ln -vs /tmp/roop /home/studio-lab-user/SDZ/models/roop\n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/Extras/roopz/inswapper_128.onnx -d /home/studio-lab-user/SDZ/models/roop -o inswapper_128.onnx\n",
+    "\n",
+    "    !mkdir -p /tmp/insightface\n",
+    "    !rm -rd ~/SDZ/models/insightface\n",
+    "    !ln -vs /tmp/insightface /home/studio-lab-user/SDZ/models/insightface\n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/Extras/roopz/inswapper_128.onnx -d /home/studio-lab-user/SDZ/models/roop -o inswapper_128.onnx\n",
+    "\n",
+    "\n",
     "    !mkdir -p /tmp/Codeformer\n",
     "    !rm -rd ~/SDZ/models/Codeformer\n",
     "    !ln -vs /tmp/Codeformer /home/studio-lab-user/SDZ/models/Codeformer\n",
@@ -111,9 +122,12 @@
     "    !git clone https://github.com/Mikubill/sd-webui-controlnet\n",
     "    #!git clone https://github.com/A-I-Channel/explorer-image\n",
     "    #!git clone https://github.com/A-I-Channel/public-link\n",
+    "\n",
     "    #!git clone https://github.com/Gourieff/sd-webui-reactor\n",
+    "    #!sed -i 's/package: str, version: str | None = None, strict: bool = True/package: str, version: str = None, strict: bool = True/g' /home/studio-lab-user/SDZ/extensions/sd-webui-reactor/install.py\n",
     "\n",
     "    #!git clone https://github.com/wilzamguerrero/rp\n",
+    "\n",
     "    #!git clone https://github.com/glucauze/sd-webui-faceswaplab\n",
     "    #!sed -i '17,44d' /home/studio-lab-user/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
     "    #!sed -i '17s/.*/    return False/' /home/studio-lab-user/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
