--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -72,16 +72,10 @@
     "    #!rm -rd ~/SDZ/outputs\n",
     "    #!ln -vs /tmp/outputs /home/studio-lab-user/SDZ/outputs\n",
     "\n",
-    "    !mkdir -p /tmp/roop\n",
-    "    !rm -rd ~/SDZ/models/roop\n",
-    "    !ln -vs /tmp/roop /home/studio-lab-user/SDZ/models/roop\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/Extras/roopz/inswapper_128.onnx -d /home/studio-lab-user/SDZ/models/roop -o inswapper_128.onnx\n",
-    "\n",
     "    !mkdir -p /tmp/insightface\n",
     "    !rm -rd ~/SDZ/models/insightface\n",
     "    !ln -vs /tmp/insightface /home/studio-lab-user/SDZ/models/insightface\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/Extras/roopz/inswapper_128.onnx -d /home/studio-lab-user/SDZ/models/roop -o inswapper_128.onnx\n",
-    "\n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/Extras/roopz/inswapper_128.onnx -d /home/studio-lab-user/SDZ/models/insightface -o inswapper_128.onnx\n",
     "\n",
     "    !mkdir -p /tmp/Codeformer\n",
     "    !rm -rd ~/SDZ/models/Codeformer\n",
@@ -114,19 +108,16 @@
     "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111\n",
     "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete\n",
     "    !git clone https://github.com/zanllp/sd-webui-infinite-image-browsing\n",
+    "    !git clone https://github.com/AlUlkesh/stable-diffusion-webui-images-browser\n",
     "    !git clone https://github.com/yankooliveira/sd-webui-photopea-embed\n",
     "    !git clone https://github.com/Physton/sd-webui-prompt-all-in-one\n",
     "    !git clone https://github.com/ArtVentureX/sd-webui-agent-scheduler\n",
     "    !git clone https://github.com/richrobber2/canvas-zoom\n",
     "    !git clone https://github.com/viyiviyi/stable-diffusion-webui-zoomimage\n",
     "    !git clone https://github.com/Mikubill/sd-webui-controlnet\n",
-    "    #!git clone https://github.com/A-I-Channel/explorer-image\n",
-    "    #!git clone https://github.com/A-I-Channel/public-link\n",
     "\n",
     "    #!git clone https://github.com/Gourieff/sd-webui-reactor\n",
     "    #!sed -i 's/package: str, version: str | None = None, strict: bool = True/package: str, version: str = None, strict: bool = True/g' /home/studio-lab-user/SDZ/extensions/sd-webui-reactor/install.py\n",
-    "\n",
-    "    #!git clone https://github.com/wilzamguerrero/rp\n",
     "\n",
     "    #!git clone https://github.com/glucauze/sd-webui-faceswaplab\n",
     "    #!sed -i '17,44d' /home/studio-lab-user/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
@@ -137,6 +128,7 @@
     "\n",
     "    #!git clone https://github.com/continue-revolution/sd-webui-animatediff\n",
     "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/guoyww/animatediff/resolve/main/mm_sd_v15_v2.ckpt -d /home/studio-lab-user/SDZ/models/Stable-diffusion -o mm_sd_v15_v2.ckpt\n",
+    "    #!git clone https://github.com/deforum-art/deforum-for-automatic1111-webui.git\n",
     "    #!git clone https://github.com/DavideAlidosi/sd-webui-controlnet-animatediff\n",
     "    #!git clone https://github.com/DavideAlidosi/sd-webui-animatediff-for-ControlNet\n",
     "    #!git clone https://github.com/NextDiffusion/next-view\n",
@@ -163,13 +155,14 @@
     "    #!git clone https://github.com/nonnonstop/sd-webui-3d-open-pose-editor.git\n",
     "    #!git clone https://github.com/hnmr293/posex.git\n",
     "\n",
+    "    #!git clone https://github.com/A-I-Channel/explorer-image\n",
+    "    #!git clone https://github.com/A-I-Channel/public-link\n",
     "    #!git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git\n",
     "    #!git clone https://github.com/opparco/stable-diffusion-webui-composable-lora.git\n",
     "    #!git clone https://github.com/thygate/stable-diffusion-webui-depthmap-script\n",
     "    #!git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
     "    #!git clone https://github.com/alemelis/sd-webui-ar.git\n",
     "    #!git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
-    "    #!git clone https://github.com/NextDiffusion/next-view\n",
     "    #!git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
     "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-pixelization.git\n",
     "    #!git clone https://github.com/s9roll7/ebsynth_utility.git\n",
@@ -189,8 +182,6 @@
     "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-rembg\n",
     "    #!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface\n",
     "    #!git clone https://github.com/AIrjen/OneButtonPrompt.git\n",
-    "    #!git clone https://github.com/deforum-art/deforum-for-automatic1111-webui.git\n",
-    "    #!git clone https://github.com/zanllp/sd-webui-infinite-image-browsing.git\n",
     "    #!git clone https://github.com/Uminosachi/sd-webui-inpaint-anything.git\n",
     "    #!wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py\n",
     "    #!git clone https://github.com/CiaraStrawberry/TemporalKit.git\n",
@@ -386,10 +377,11 @@
     "    clear_output()\n",
     "    print(COLOR_WHITE + \"CREATE NGROK TOKEN >>> https://dashboard.ngrok.com/get-started/your-authtoken\" + COLOR_RESET)\n",
     "    print(COLOR_CYAN + \"SDZ CANT RUN IF YOU ENTER A INVALID NGROK TOKEN\" + COLOR_RESET)\n",
+    "    print(\" \")\n",
     "    ngrok_token = input(\" Insert ngrok token: \")\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ RUNNING\" + COLOR_RESET)\n",
-    "    SDZ_Args = f\"--ngrok {ngrok_token} --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle --disable-console-progressbars\"\n",
+    "    SDZ_Args = f\"--ngrok {ngrok_token} --api --share --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle --disable-console-progressbars\"\n",
     "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python launch.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ FINISH\" + COLOR_RESET)\n",
